Closed Bug 993174 Opened 11 years ago Closed 11 years ago

Fix non-unified build error in Simulator-arm.cpp

Categories

(Core :: JavaScript Engine: JIT, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla31
Tracking Status
firefox30 --- fixed
firefox31 --- fixed
b2g-v1.4 --- fixed
b2g-v2.0 --- fixed

People

(Reporter: sunfish, Assigned: sunfish)

Details

(Whiteboard: [qa-])

Attachments

(1 file)

Attached patch decl-order.patchSplinter Review
Simulator-arm.cpp uses __aeabi_idivmod and __aeabi_uidivmod before it defines them. This appears to work in unified builds, because they are declared in other cpp files, but in the non-unified build, those aren't visible, so it doesn't build. The attached patch fixes this by moving the definitions of these functions to the top of Simulator-arm.cpp so that they're declared before being used.
Comment on attachment 8402987 [details] [diff] [review] decl-order.patch Here's the patch you suggested on irc.
Attachment #8402987 - Flags: review?(mrosenberg)
Attachment #8402987 - Flags: review?(mrosenberg) → review+
Assignee: nobody → sunfish
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
Noticed that this bug is causing a failure on try runs of the beta branch. It's only a small patch, and might it be useful to uplift it?
That means it also affects being able to push B2G 1.4 to Try, so I would agree that we should probably take it. Please nominate :)
Comment on attachment 8402987 [details] [diff] [review] decl-order.patch [Approval Request Comment] Bug caused by (feature/regressing bug #): Bug 959597. User impact if declined: None, but it causes a failure running a try build on the beta branch see: https://tbpl.mozilla.org/php/getParsedLog.php?id=39898819&tree=Try Testing completed (on m-c, etc.): Tested on m-c, and it fixed a failure on a try run on the beta branch. Risk to taking this patch (and alternatives if risky): Low risk, the patch is to the ARM simulator used for testing and does not affect deployed code. String or IDL/UUID changes made by this patch: n/a
Attachment #8402987 - Flags: approval-mozilla-beta?
Note that this patch doesn't need approval AFAIK; Simulator-arm.cpp is NPOTB.
Comment on attachment 8402987 [details] [diff] [review] decl-order.patch Go ahead with a=NPOTB in that case.
Attachment #8402987 - Flags: approval-mozilla-beta?
Whiteboard: [checkin-needed-beta]
Whiteboard: [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: